# Stock-Backtester

./: .gitignore  app.py  dashboard.py  data_loader.py  krx_list.csv  portfolio_v2.8_20260226_2010.csv  portfolio_v2.8_20260226_2012.csv  portfolio_v2.8_20260226_2018.csv  portfolio_v2.8_20260226_2019.csv  portfolio_v2.8_20260226_2020.csv  portfolio_v2.8_20260226_2021.csv  pyproject.toml  test_logo.py  us_stocks.csv
01_Backtest_Engine/: v1.0_Basic_Multi_Asset_Engine.py  v2.0_Interactive_Backtester_with_Smoothing.py  v2.1_Advanced_Backtester_with_Visuals.py  v2.2_Bloomberg_Style_Dark_Backtester.py  v2.3_Total_Return_Backtester_with_Reinvestment.py  v2.4_Refactored_TR_Engine.py  v2.5_Cash_Dividend_Simple_Sum_Analyzer.py  v2.6_Bloomberg_Risk_Analyzer.py  v2.7_Historical_FX_Orange_Edition.py  v2.8_main.py
02_Portfolio_Tracker/: v1.1_Tracker_with_Logging_and_Analysis.py
