[project]
name = "stock-backtester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "html5lib>=1.1",
    "koreanize-matplotlib>=0.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "setuptools>=82.0.0",
    "yfinance>=1.2.0",
]
