[project]
name = "stock-backtester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.0.0",              # <5에서 >=5.0.0으로 변경
    "beautifulsoup4>=4.14.3",
    "financedatabase>=2.1.0",
    "html5lib>=1.1",
    "koreanize-matplotlib>=0.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=2.0.0",              # 참고: pandas 3.0은 매우 최신이라 2.x대가 안정적일 수 있습니다.
    "pandas-datareader>=0.10.0",
    "plotly>=6.0.0",
    "pyarrow>=14.0.0",
    "requests>=2.32.5",
    "setuptools>=70.0.0",
    "streamlit>=1.40.0",          # 1.19.0에서 1.40.0으로 변경
    "yfinance>=0.2.0",            # yfinance는 0.2.x 대가 현재 표준입니다 (1.2.0은 오타일 확률이 높음)
]
